--- a/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2025-06-30 11:16+0200\n"
+"POT-Creation-Date: 2025-06-30 22:44+0200\n"
 "PO-Revision-Date: 2021-03-03 16:24+0100\n"
 "Last-Translator: Lukas Burkhard <lukas.burkhard@seantis.ch>\n"
 "Language-Team: German\n"
@@ -293,7 +293,7 @@ msgid "Meeting"
 msgstr "Sitzung"
 
 msgid "Parliamentarians"
-msgstr "Parlamentarier:innen"
+msgstr "Parlamentarierinnen und Parlamentarier"
 
 msgid "RIS Settings"
 msgstr "Ratsinformationssystem"
@@ -357,6 +357,9 @@ msgstr "Möchten Sie die Kommission wirklich löschen?"
 
 msgid "Delete commission"
 msgstr "Kommission löschen"
+
+msgid "Political Businesses"
+msgstr "Politische Geschäfte"
 
 msgid "No availability periods defined."
 msgstr "Keine Verfügbarkeitszeiträume definiert."
@@ -1901,7 +1904,7 @@ msgid "Role"
 msgstr "Rolle"
 
 msgid "No parliamentarians defined yet."
-msgstr "Noch keine Parlamentarier:innen erfasst."
+msgstr "Noch keine Parlamentarier erfasst."
 
 msgid "No parliamentary groups defined yet."
 msgstr "Noch keine Fraktionen erfasst."
@@ -1910,7 +1913,7 @@ msgid "No parties defined yet."
 msgstr "Noch keine Parteien erfasst."
 
 msgid "Portrait"
-msgstr ""
+msgstr "Portrait"
 
 msgid "No payment providers defined."
 msgstr "Keine Zahlungsanbieter definiert."
@@ -1944,6 +1947,33 @@ msgstr "Filter zurücksetzen"
 
 msgid "Export a vCard of this person"
 msgstr "Elektronische Visitenkarte (vCard)"
+
+msgid "Number"
+msgstr "Nummer"
+
+msgid "Type"
+msgstr "Typ"
+
+msgid "Status"
+msgstr "Status"
+
+msgid "Participants"
+msgstr "Teilnehmer"
+
+msgid "Parliamentary Group"
+msgstr "Fraktion"
+
+msgid "No political businesses defined yet."
+msgstr "Es wurden noch keine politischen Geschäfte erfasst."
+
+msgid "Datum"
+msgstr "Datum"
+
+msgid "Political Business"
+msgstr "Politisches Geschäft"
+
+msgid "<dynamic element>"
+msgstr "<dynamic element>"
 
 msgid "No publications"
 msgstr "Keine Publikationen"
@@ -2399,7 +2429,7 @@ msgid "New commission"
 msgstr "Neue Kommission"
 
 msgid "Your changes were saved"
-msgstr ""
+msgstr "Ihre Änderungen wurden gespeichert"
 
 msgid "Sort"
 msgstr "Sortieren"
@@ -2529,574 +2559,10 @@ msgid "Push Notification Overview"
 msgstr "Übersicht Push-Benachrichtigungen"
 
 msgid "Ratsinformationssystem"
-msgstr ""
+msgstr "Ratsinformationssystem"
 
 msgid "Ratsinformationssystem (RIS)"
-msgstr ""
+msgstr "Ratsinformationssystem (RIS)"
 
 msgid "New Note"
 msgstr "Neue Notiz"
-
-msgid "Inquiry"
-msgstr "Anfrage"
-
-msgid "Proposal"
-msgstr "Antrag"
-
-msgid "Mandate"
-msgstr "Auftrag"
-
-msgid "Report"
-msgstr "Bericht"
-
-msgid "Report and Proposal"
-msgstr "Bericht und Antrag"
-
-msgid "Decision"
-msgstr "Beschluss"
-
-msgid "Message"
-msgstr "Botschaft"
-
-msgid "Urgent Interpellation"
-msgstr "Dringliche Interpellation"
-
-msgid "Invitation"
-msgstr "Einladung"
-
-msgid "Interpellation"
-msgstr "Interpellation"
-
-msgid "Commission Report"
-msgstr "Kommissionsbericht"
-
-msgid "Communication"
-msgstr "Mitteilung"
-
-msgid "Motion"
-msgstr "Motion"
-
-msgid "Postulate"
-msgstr "Postulat"
-
-msgid "Resolution"
-msgstr "Resolution"
-
-msgid "Regulation"
-msgstr "Verordnung"
-
-msgid "Miscellaneous"
-msgstr "Verschiedenes"
-
-msgid "Elections"
-msgstr "Wahlen"
-
-
-#~ msgid "Parliamentarian is not in this commission."
-#~ msgstr "Parlamentarier:in ist nicht in dieser Kommission."
-
-#~ msgid "Basic properties"
-#~ msgstr "Grundeigenschaften"
-
-#~ msgid "Gender"
-#~ msgstr "Geschlecht"
-
-#~ msgid "Additional information"
-#~ msgstr "Zusatzinformationen"
-
-#~ msgid "Party role"
-#~ msgstr "Rolle in der Partei"
-
-#~ msgid "Parliamentary group role"
-#~ msgstr "Rolle in der Fraktion"
-
-#~ msgid "President"
-#~ msgstr "Präsident:in"
-
-#~ msgid "Commission meeting"
-#~ msgstr "Kommissionsitzung"
-
-#~ msgid "intercantonal commission"
-#~ msgstr "interkantonale Kommission"
-
-#~ msgid "Vice president"
-#~ msgstr "Vize-Präsident:in"
-
-#~ msgid "End must be after start"
-#~ msgstr "Ende muss nach dem Start liegen"
-
-#~ msgid "Do you really want to delete this meeting?"
-#~ msgstr "Diese Sitzung wirklich löschen?"
-
-#~ msgid "Delete meeting"
-#~ msgstr "Sitzung löschen"
-
-#~ msgid "Do you really want to remove this parliamentarian?"
-#~ msgstr "Diese:n Parlamentarier:in wirklich entfernen?"
-
-#~ msgid "Remove parliamentarian"
-#~ msgstr "Parlamentarier:in entfernen"
-
-#~ msgid "Extended Member"
-#~ msgstr "erweitertes Mitglied"
-
-#~ msgid "male"
-#~ msgstr "männlich"
-
-#~ msgid "female"
-#~ msgstr "weiblich"
-
-#~ msgid "Vote counter"
-#~ msgstr "Stimmenzähler"
-
-#~ msgid "Media Manager"
-#~ msgstr "Leiter Medien und Kampagnen"
-
-#~ msgid "President of the parliamentary group"
-#~ msgstr "Fraktionsschef"
-
-#~ msgid "No meeting defined yet."
-#~ msgstr "Noch keine Sitzung erfasst."
-
-#~ msgid "Comission"
-#~ msgstr "Kommission"
-
-#~ msgid "Added commission meeting"
-#~ msgstr "Kommissionsitzung hinzugefügt"
-
-#~ msgid "New commission meeting"
-#~ msgstr "Neue Kommissionsitzung"
-
-#~ msgid "All Parties"
-#~ msgstr "Alle Parteien"
-
-#~ msgid "Addition"
-#~ msgstr "Adresszusatz"
-
-#~ msgid "Zip code"
-#~ msgstr "PLZ"
-
-#~ msgid "City"
-#~ msgstr "Ort"
-
-msgid "Political Business"
-msgstr "Politisches Geschäft"
-
-msgid "Political Businesses"
-msgstr "Politische Geschäfte"
-
-msgid "No political businesses defined yet."
-msgstr "Es wurden noch keine politischen Geschäfte erfasst."
-
-
-#~ msgid "Sign up"
-#~ msgstr "Anmelden"
-
-#~ msgid "Notify on newsletter unsubscription"
-#~ msgstr "Benachrichtigung bei Abmeldung vom Newsletter"
-
-#~ msgid ""
-#~ "Send an email notification when a user unsubscribes from the newsletter"
-#~ msgstr ""
-#~ "Sende eine E-Mail-Benachrichtigung, wenn sich ein Benutzer vom Newsletter "
-#~ "abmeldet"
-
-#~ msgid ""
-#~ "The user with the address <strong>${address}</strong> just unsubscribed "
-#~ "from the newsletter subscriber list."
-#~ msgstr ""
-#~ "Der Benutzer mit der Adresse <strong>${address}</strong> hat sich soeben "
-#~ "von der Newsletter-Abonnentenliste abgemeldet."
-
-#~ msgid "Change Request"
-#~ msgstr "Änderung vorschlagen"
-
-#~ msgid "Found an error? Propose a change to this entry."
-#~ msgstr "Haben Sie einen Fehler gefunden? Schlagen Sie eine Änderung vor."
-
-#~ msgid "Propose entry"
-#~ msgstr "Eintrag vorschlagen"
-
-#~ msgid "Something missing? Propose a new entry."
-#~ msgstr ""
-#~ "Fehlt ein Eintrag im Verzeichnis? Schlagen Sie einen neuen Eintrag vor."
-
-#~ msgid "Newsletter Subscription"
-#~ msgstr "Newsletter-Abonnement"
-
-#~ msgid "Update Newsletter Subscription"
-#~ msgstr "Newsletter-Abonnement aktualisieren"
-
-#~ msgid "Update your newsletter subscription categories:"
-#~ msgstr "Aktualisieren Sie Ihre Newsletter-Abonnementkategorien:"
-
-#~ msgid "Rejection withdrawn."
-#~ msgstr "Ablehnung zurückgezogen."
-
-#~ msgid ""
-#~ "Select newsletter categories your are interested in. You will receive the "
-#~ "newsletter if it reports on at least one of the subscribed categories."
-#~ msgstr ""
-#~ "Wählen Sie die Newsletter-Kategorien aus, an denen Sie interessiert sind. "
-#~ "Sie werden den Newsletter erhalten, wenn er über mindestens eine der "
-#~ "abonnierten Kategorien berichtet."
-
-#~ msgid ""
-#~ "Select categories the newsletter reports on. The users will receive the "
-#~ "newsletter only if it reports on at least one of the categories the user "
-#~ "subscribed to."
-#~ msgstr ""
-#~ "Wählen Sie die Kategorien aus, über die der Newsletter berichtet. Die "
-#~ "Benutzer erhalten den Newsletter nur, wenn er über mindestens eine der "
-#~ "Kategorien berichtet, die der Benutzer abonniert hat."
-
-#~ msgid "Newsletter categories"
-#~ msgstr "Newsletter-Kategorien"
-
-#~ msgid ""
-#~ "Example for newsletter topics with subtopics in yaml format. Note: Deeper "
-#~ "structures are not supported.\n"
-#~ "```\n"
-#~ "Organisation:\n"
-#~ "  - Topic 1:\n"
-#~ "    - Subtopic 1.1\n"
-#~ "    - Subtopic 1.2\n"
-#~ "  - Topic 2\n"
-#~ "  - Topic 3:\n"
-#~ "    - Subtopic 3.1\n"
-#~ "```"
-#~ msgstr ""
-#~ "Beispiel für Newsletter-Themen mit Unterthemen im yaml-Format. Hinweis: "
-#~ "Tiefere Strukturen werden nicht unterstützt.\n"
-#~ "```\n"
-#~ "Organisation:\n"
-#~ "  - Thema 1:\n"
-#~ "    - Unterthema 1.1\n"
-#~ "    - Unterthema 1.2\n"
-#~ "  - Thema 2\n"
-#~ "  - Thema 3:\n"
-#~ "    - Unterthema 3.1\n"
-#~ "```"
-
-#~ msgid "Sign up to our newsletter to always stay up to date:"
-#~ msgstr ""
-#~ "Abonnieren Sie unseren Newsletter um immer auf dem Laufenden zu bleiben:"
-
-#~ msgid "Error: No custom texts found"
-#~ msgstr "Fehler: Keine benutzerdefinierten Texte gefunden"
-
-#, python-format
-#~ msgid "Error: No custom text found for '${key}'"
-#~ msgstr "Fehler: Kein benutzerdefinierter Text gefunden für '${key}'"
-
-#~ msgid "Subscribe to Selection as RSS"
-#~ msgstr "Hashtags abonnieren"
-
-#~ msgid "Save"
-#~ msgstr "Speichern"
-
-#~ msgid "This event can't be edited."
-#~ msgstr "Diese Veranstaltung kann nicht bearbeitet werden."
-
-#~ msgid "Imported events can not be edited."
-#~ msgstr "Importierte Veranstaltungen können nicht bearbeitet werden."
-
-#~ msgid "Withdraw event"
-#~ msgstr "Veranstaltung zurückziehen"
-
-#~ msgid "Do you really want to withdraw this event?"
-#~ msgstr "Wollen sie diese Veranstaltung zurückziehen? "
-
-#~ msgid "You can re-publish an imported event later."
-#~ msgstr ""
-#~ "Sie können importierte Veranstaltungen später wieder veröffentlichen."
-
-#~ msgid "Re-publish event"
-#~ msgstr "Veranstaltung wieder veröffentlichen"
-
-#~ msgid "Do you really want to delete this event?"
-#~ msgstr "Möchten Sie die Veranstaltung wirklich löschen?"
-
-#~ msgid "This event can't be deleted."
-#~ msgstr "Diese Veranstaltung kann nicht gelöscht werden."
-
-#~ msgid "To remove this event, go to the ticket and reject it."
-#~ msgstr ""
-#~ "Sie können die Veranstaltung jedoch in der Ticketansicht absagen, um sie "
-#~ "zu entfernen."
-
-#~ msgid "Show news as tiles"
-#~ msgstr "Aktuelles als Kacheln anzeigen"
-
-#~ msgid ""
-#~ "If checked, news are displayed as tiles. Otherwise, news are listed in "
-#~ "full length."
-#~ msgstr ""
-#~ "Wenn diese Option aktiviert ist, werden die Nachrichten als Kacheln "
-#~ "angezeigt. Anderfalls werden die Nachrichten in voller Länge "
-#~ "untereinander aufgelistet."
-
-#~ msgid "Settings"
-#~ msgstr "Einstellungen"
-
-#~ msgid "Forms"
-#~ msgstr "Formulare"
-
-#~ msgid "This form can't be deleted."
-#~ msgstr "Das Formular kann nicht gelöscht werden."
-
-#~ msgid ""
-#~ "There are submissions associated with the form. Those need to be removed "
-#~ "first."
-#~ msgstr ""
-#~ "Es existieren Eingaben die mit diesem Formular verknüpft sind. Löschen "
-#~ "Sie diese Eingaben bevor Sie das Formular löschen."
-
-#~ msgid "Do you really want to delete this form?"
-#~ msgstr "Möchten Sie das Formular wirklich löschen?"
-
-#~ msgid "Delete form"
-#~ msgstr "Formular löschen"
-
-#~ msgid "Registration Windows"
-#~ msgstr "Anmeldezeitraum"
-
-#~ msgid "External form"
-#~ msgstr "Externes Formular"
-
-#~ msgid "New external form"
-#~ msgstr "Neues externes Formular"
-
-#~ msgid "Person"
-#~ msgstr "Person"
-
-#~ msgid "Do you really want to delete this person?"
-#~ msgstr "Möchten Sie die Person wirklich löschen?"
-
-#~ msgid "Delete person"
-#~ msgstr "Person löschen"
-
-#~ msgid "Delete archived tickets"
-#~ msgstr "Archivierte Tickets löschen"
-
-#~ msgid "Do you really want to delete all archived tickets?"
-#~ msgstr "Möchten Sie wirklich alle archivierten Tickets löschen?"
-
-#~ msgid "Accept ticket"
-#~ msgstr "Ticket annehmen"
-
-#~ msgid "This ticket can't be closed."
-#~ msgstr "Dieses Ticket kann nicht abgeschlossen werden."
-
-#~ msgid "This ticket requires a decision, but no decision has been made yet."
-#~ msgstr ""
-#~ "Dieses Ticket verlangt nach einer Entscheidung, aber bisher wurde keine "
-#~ "Entscheidung gefällt."
-
-#~ msgid "Assign ticket"
-#~ msgstr "Ticket zuweisen"
-
-#~ msgid "Close ticket"
-#~ msgstr "Ticket abschliessen"
-
-#~ msgid "Reopen ticket"
-#~ msgstr "Ticket wieder öffnen"
-
-#~ msgid "Archive ticket"
-#~ msgstr "Ticket archivieren"
-
-#~ msgid "Recover from archive"
-#~ msgstr "Aus dem Archiv holen"
-
-#~ msgid "Delete Ticket"
-#~ msgstr "Ticket löschen"
-
-#~ msgid "PDF"
-#~ msgstr "PDF"
-
-#~ msgid "Download files"
-#~ msgstr "Dateien herunterladen"
-
-#~ msgid "New Message"
-#~ msgstr "Neue Nachricht"
-
-#~ msgid "Ticket Status"
-#~ msgstr "Ticket Status"
-
-#~ msgid "Text modules"
-#~ msgstr "Textbausteine"
-
-#~ msgid "Text module"
-#~ msgstr "Textbaustein"
-
-#~ msgid "Do you really want to delete this text module?"
-#~ msgstr "Möchten Sie diesen Textbaustein wirklich löschen"
-
-#~ msgid "Delete text module"
-#~ msgstr "Textbaustein löschen"
-
-#~ msgid "Room"
-#~ msgstr "Raum"
-
-#~ msgid "Daypass"
-#~ msgstr "Tageskarte"
-
-#~ msgid "Resource Item"
-#~ msgstr "Gegenstand"
-
-#~ msgid "External resource link"
-#~ msgstr "Externer Reservationslink"
-
-#~ msgid "New external resource"
-#~ msgstr "Neue externe Reservation"
-
-#~ msgid "Export All"
-#~ msgstr "Alles exportieren"
-
-#~ msgid "Notifications"
-#~ msgstr "Mitteilungen"
-
-#~ msgid "E-Mail Recipient"
-#~ msgstr "E-Mail Empfänger"
-
-#~ msgid "Do you really want to delete this resource?"
-#~ msgstr "Möchten Sie diese Reservations-Ressource wirklich löschen?"
-
-#~ msgid "Delete resource"
-#~ msgstr "Reservations-Ressource löschen"
-
-#~ msgid "This resource can't be deleted."
-#~ msgstr "Diese Reservations-Ressource kann nicht gelöscht werden."
-
-#~ msgid "There are existing reservations associated with this resource"
-#~ msgstr "Es existieren Reservationen für diese Reservations-Ressource"
-
-#~ msgid "Clean up"
-#~ msgstr "Aufräumen"
-
-#~ msgid "Rules"
-#~ msgstr "Regeln"
-
-#~ msgid "Rule"
-#~ msgstr "Regel"
-
-#~ msgid "Edit allocation"
-#~ msgstr "Einteilung bearbeiten"
-
-#~ msgid "Do you really want to delete this allocation?"
-#~ msgstr "Möchten Sie diese Einteilung wirklich löschen?"
-
-#~ msgid "Delete allocation"
-#~ msgstr "Einteilung löschen"
-
-#, python-format
-#~ msgid "Every ${days} until ${end}"
-#~ msgstr "Jeden ${days} bis zum ${end}."
-
-#~ msgid "Subscribers"
-#~ msgstr "Abonnenten"
-
-#~ msgid "Test"
-#~ msgstr "Test"
-
-#~ msgid "Delete newsletter"
-#~ msgstr "Newsletter löschen"
-
-#~ msgid "Photo Albums"
-#~ msgstr "Fotoalben"
-
-#~ msgid "Manage images"
-#~ msgstr "Bilder verwalten"
-
-#~ msgid "Photo Album"
-#~ msgstr "Fotoalbum"
-
-#~ msgid "Choose images"
-#~ msgstr "Bilder auswählen"
-
-#~ msgid "Delete photo album"
-#~ msgstr "Fotoalbum löschen"
-
-#~ msgid "Usermanagement"
-#~ msgstr "Benutzerverwaltung"
-
-#~ msgid "Create Signup Link"
-#~ msgstr "Neuer Registrationslink"
-
-#~ msgid "User"
-#~ msgstr "Benutzer"
-
-#~ msgid "User groups"
-#~ msgstr "Benutzergruppen"
-
-#~ msgid "Do you really want to delete this user group?"
-#~ msgstr "Möchten Sie diese Benutzergruppe wirklich löschen"
-
-#~ msgid "Delete user group"
-#~ msgstr "Benutzergruppe löschen"
-
-#~ msgid "Payment Providers"
-#~ msgstr "Zahlungsanbieter"
-
-#~ msgid "Payments"
-#~ msgstr "Zahlungen"
-
-#~ msgid "Synchronise"
-#~ msgstr "Synchronisieren"
-
-#~ msgid "Upcoming"
-#~ msgstr "Demnächst"
-
-#~ msgid "Past"
-#~ msgstr "Vergangen"
-
-#~ msgid "Choose filter"
-#~ msgstr "Filter wählen"
-
-#~ msgid "Delete entry"
-#~ msgstr "Eintrag löschen"
-
-#~ msgid "Dashboard"
-#~ msgstr "Dashboard"
-
-#~ msgid "Do you really want to delete this external link?"
-#~ msgstr "Wollen sie die externe Verknüpfung wirklich löschen?"
-
-#~ msgid "Delete external link"
-#~ msgstr "Verknüpfung löschen"
-
-#~ msgid "Chat with"
-#~ msgstr "Chat mit"
-
-#~ msgid "Please add a day and times to each opening hour entry."
-#~ msgstr ""
-#~ "Bitte fügen Sie zu jeder Öffnungszeit einen Tag und eine Uhrzeit hinzu."
-
-#~ msgid "The chat is currently in a test-phase. Activate at your own risk."
-#~ msgstr ""
-#~ "Der Chat befindet sich aktuell in einer Test-Phase. Auf eigenes Risiko "
-#~ "aktivieren."
-
-#~ msgid "Chat title"
-#~ msgstr "Chat Titel"
-
-#~ msgid "Chat background color"
-#~ msgstr "Chat Hintegrundfarbe"
-
-#~ msgid "Customer-ID"
-#~ msgstr "Kunden-Identifier"
-
-#~ msgid "Admin"
-#~ msgstr "Admin"
-
-#~ msgid "Disable the chat"
-#~ msgstr "Chat deaktivieren"
-
-#~ msgid "Supported Chat Integrations"
-#~ msgstr "Unterstützte Chat Integration"
-
-#~ msgid "Straight to ..."
-#~ msgstr "Direkt zu ..."
-
-#~ msgid "Perform Search"
-#~ msgstr "Suchen"
