--- a/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2025-06-26 13:21+0200\n"
+"POT-Creation-Date: 2025-06-30 22:44+0200\n"
 "PO-Revision-Date: 2021-03-03 14:04+0100\n"
 "Last-Translator: Lukas Burkhard <lukas.burkhard@seantis.ch>\n"
 "Language-Team: French\n"
@@ -155,6 +155,12 @@ msgstr "Sa"
 msgid "Su"
 msgstr "Di"
 
+msgid "Enable RIS"
+msgstr "Activer RIS"
+
+msgid "Enables the RIS integration for this organisation."
+msgstr "Active l'intégration RIS pour cette organisation."
+
 msgid "Events"
 msgstr "Événements"
 
@@ -280,6 +286,81 @@ msgstr "Page d'accueil"
 msgid "Chat Archive"
 msgstr "Archives des chats"
 
+msgid "Meetings"
+msgstr "Réunions"
+
+msgid "Meeting"
+msgstr "Réunion"
+
+msgid "Parliamentarians"
+msgstr "Parlementaires"
+
+msgid "RIS Settings"
+msgstr "Paramètres RIS"
+
+msgid "Parliamentarian"
+msgstr "Parlementaire"
+
+msgid "Role (as a party or group member)"
+msgstr "Rôle (en tant que membre d'un parti ou d'un groupe)"
+
+msgid "Edit"
+msgstr "Modifier"
+
+msgid "Do you really want to delete this parliamentarian?"
+msgstr "Voulez-vous vraiment supprimer ce parlementaire ?"
+
+msgid "This cannot be undone."
+msgstr "Cela ne peut être effectué."
+
+msgid "Delete parliamentarian"
+msgstr "Supprimer le parlementaire"
+
+msgid "Do you really want to remove this role?"
+msgstr "Voulez-vous vraiment supprimer ce rôle ?"
+
+msgid "Remove role"
+msgstr "Supprimer le rôle"
+
+msgid "Parliamentary groups"
+msgstr "Groupes Parlementaires"
+
+msgid "Parliamentary group"
+msgstr "Groupe Parlementaire"
+
+msgid "Do you really want to delete this parliamentary group?"
+msgstr "Voulez-vous vraiment supprimer ce groupe parlementaire?"
+
+msgid "Delete parliamentary group"
+msgstr "Supprimer ce groupe parlementaire"
+
+msgid "Parties"
+msgstr "Partis"
+
+msgid "Party"
+msgstr "Parti"
+
+msgid "Do you really want to delete this party?"
+msgstr "Voulez-vous vraiment supprimer ce parti ?"
+
+msgid "Delete party"
+msgstr "Supprimer le parti"
+
+msgid "Commissions"
+msgstr "Commissions"
+
+msgid "Commission"
+msgstr "Commission"
+
+msgid "Do you really want to delete this commission?"
+msgstr "Voulez-vous vraiment supprimer cette commission ?"
+
+msgid "Delete commission"
+msgstr "Supprimer la commission"
+
+msgid "Political Businesses"
+msgstr "Affaires politiques"
+
 msgid "No availability periods defined."
 msgstr "Aucune période de disponibilité définie."
 
@@ -347,6 +428,15 @@ msgstr "Chats actifs"
 
 msgid "No active chats."
 msgstr "Aucun chat actif."
+
+msgid "Contact"
+msgstr "Contact"
+
+msgid "No active commissions."
+msgstr "Aucune commission active."
+
+msgid "Filters"
+msgstr "Filtres"
 
 msgid "No directories defined yet."
 msgstr "Aucun dossier défini pour l'instant."
@@ -496,8 +586,8 @@ msgid ""
 "filled-out form."
 msgstr ""
 "Veuillez vérifier vos données et appuyez sur « Compléter » pour finaliser le "
-"processus. S'il y a quelque chose que vous souhaitez modifier, cliquez sur "
-"« Modifier » pour retourner sur le formulaire complété."
+"processus. S'il y a quelque chose que vous souhaitez modifier, cliquez sur « "
+"Modifier » pour retourner sur le formulaire complété."
 
 msgid ""
 "The image shown in the list view is a square. To have your image shown fully "
@@ -508,9 +598,6 @@ msgstr ""
 
 msgid "Complete"
 msgstr "Complet"
-
-msgid "Edit"
-msgstr "Modifier"
 
 msgid "No exports available."
 msgstr "Aucune exportation disponible."
@@ -615,9 +702,6 @@ msgstr "Connexion"
 
 msgid "About"
 msgstr "Impressum"
-
-msgid "Contact"
-msgstr "Contact"
 
 msgid "more"
 msgstr "plus"
@@ -844,9 +928,6 @@ msgstr "Numéro de téléphone de l'organisateur"
 
 msgid "Tags"
 msgstr "Étiquettes"
-
-msgid "Filters"
-msgstr "Filtres"
 
 msgid "Date and time"
 msgstr "Date et heure"
@@ -1500,6 +1581,12 @@ msgid "You can see the current status of your ticket at any time here:"
 msgstr ""
 "Vous pouvez consulter le statut actuel de votre billet à tout moment ici:"
 
+msgid "Agenda"
+msgstr "Agenda"
+
+msgid "No meetings defined yet."
+msgstr "Aucune réunion définie pour le moment."
+
 msgid "Directory entry adopted."
 msgstr "L'entrée de répertoire a été adoptée."
 
@@ -1743,6 +1830,90 @@ msgstr "Exporter ces événements"
 msgid "Submit your event"
 msgstr "Soumettez votre événement"
 
+msgid "Personnel number"
+msgstr "Numéro de personnel"
+
+msgid "Contract number"
+msgstr "Numéro de contrat"
+
+msgid "Picture"
+msgstr "Photo"
+
+msgid "Private address"
+msgstr "Adresse privée"
+
+msgid "Date of birth"
+msgstr "Date de naissance"
+
+msgid "Date of death"
+msgstr "Date de décès"
+
+msgid "Place of origin"
+msgstr "Lieu d'origine"
+
+msgid "Occupation"
+msgstr "Profession"
+
+msgid "Academic title"
+msgstr "Titre académique"
+
+msgid "Salutation"
+msgstr "Civilité"
+
+msgid "Salutation used in the address"
+msgstr "Civilité utilisée dans l'adresse"
+
+msgid "Salutation used for letters"
+msgstr "Civilité utilisée dans l'adresse"
+
+msgid "How bills should be delivered"
+msgstr "Comment les factures doivent être livrées"
+
+msgid "Private phone number"
+msgstr "Numéro de téléphone privé"
+
+msgid "Mobile phone number"
+msgstr "Numéro de téléphone mobile"
+
+msgid "Business phone number"
+msgstr "Numéro de téléphone professionnel"
+
+msgid "Primary email address"
+msgstr "Adresse e-mail principale"
+
+msgid "Secondary email address"
+msgstr "Adresse e-mail secondaire"
+
+msgid "Website"
+msgstr "Site Web"
+
+msgid "Remarks"
+msgstr "Remarques"
+
+msgid "Roles"
+msgstr "Rôles"
+
+msgid "Parliament"
+msgstr "Parlement"
+
+msgid "Interests"
+msgstr "Intérêts"
+
+msgid "Role"
+msgstr "Rôle"
+
+msgid "No parliamentarians defined yet."
+msgstr "Aucun parlementaire n'a été défini pour le moment."
+
+msgid "No parliamentary groups defined yet."
+msgstr "Aucun groupe parlementaire n'a été défini pour le moment."
+
+msgid "No parties defined yet."
+msgstr "Aucun parti n'a été défini pour le moment."
+
+msgid "Portrait"
+msgstr "Portrait"
+
 msgid "No payment providers defined."
 msgstr "Aucun fournisseur de paiement n'a été défini."
 
@@ -1775,6 +1946,33 @@ msgstr "Réinitialiser le filtre"
 
 msgid "Export a vCard of this person"
 msgstr "Exporter une vCard de cette personne"
+
+msgid "Number"
+msgstr "Numéro"
+
+msgid "Type"
+msgstr "Type"
+
+msgid "Status"
+msgstr "Statut"
+
+msgid "Participants"
+msgstr "Participants"
+
+msgid "Parliamentary Group"
+msgstr "Groupe parlementaire"
+
+msgid "No political businesses defined yet."
+msgstr "Aucun business politique n'a été défini pour le moment."
+
+msgid "Datum"
+msgstr "Date"
+
+msgid "Political Business"
+msgstr "Business politique"
+
+msgid "<dynamic element>"
+msgstr "<dynamic element>"
 
 msgid "No publications"
 msgstr "Aucune publication"
@@ -2162,9 +2360,6 @@ msgstr "Actif"
 msgid "Inactive"
 msgstr "Inactif"
 
-msgid "Role"
-msgstr "Rôle"
-
 msgid "User group"
 msgstr "Groupe d'utilisateurs"
 
@@ -2229,8 +2424,44 @@ msgstr "Nouveau billet"
 msgid "Chat Customer"
 msgstr "Chat avec les clients"
 
+msgid "Added a new commission"
+msgstr "Ajout d'une nouvelle commission"
+
+msgid "New"
+msgstr "Nouveau"
+
+msgid "New commission"
+msgstr "Nouvelle commission"
+
+msgid "Your changes were saved"
+msgstr "Vos modifications ont été enregistrées"
+
 msgid "Sort"
 msgstr "Trier"
+
+msgid "Added a new parliamentarian"
+msgstr "Ajout d'un nouveau parlementaire"
+
+msgid "New parliamentarian"
+msgstr "Nouveau parlementaire"
+
+msgid "Added a new role"
+msgstr "Ajout d'un nouveau rôle"
+
+msgid "New role"
+msgstr "Nouveau rôle"
+
+msgid "Added a new parliamentary group"
+msgstr "Ajout d'un nouveau groupe parlementaire"
+
+msgid "New parliamentary group"
+msgstr "Nouveau groupe parlementaire"
+
+msgid "Added a new party"
+msgstr "Ajout d'un nouveau parti"
+
+msgid "New party"
+msgstr "Nouveau parti"
 
 msgid "New Recipient"
 msgstr "Nouveau destinataire"
@@ -2332,408 +2563,11 @@ msgstr ""
 msgid "Push Notification Overview"
 msgstr "Vue d'ensemble des notifications push"
 
+msgid "Ratsinformationssystem"
+msgstr "Ratsinformationssystem"
+
+msgid "Ratsinformationssystem (RIS)"
+msgstr "Ratsinformationssystem (RIS)"
+
 msgid "New Note"
 msgstr "Nouveau commentaire"
-
-#~ msgid "Sign up"
-#~ msgstr "S'inscrire"
-
-#~ msgid "Notify on newsletter unsubscription"
-#~ msgstr "Notifier le désabonnement à la lettre d'information"
-
-#~ msgid ""
-#~ "Send an email notification when a user unsubscribes from the newsletter"
-#~ msgstr ""
-#~ "Envoyer une notification par courrier électronique lorsqu'un utilisateur "
-#~ "se désinscrit de la lettre d'information"
-
-#~ msgid "Sign up to our newsletter to always stay up to date:"
-#~ msgstr ""
-#~ "Abonnez-vous à notre lettre d'informations pour rester au courant en "
-#~ "permanence:"
-
-#~ msgid "Change Request"
-#~ msgstr "Demande de modification"
-
-#~ msgid "Found an error? Propose a change to this entry."
-#~ msgstr ""
-#~ "Vous avez trouvé une erreur? Proposez une modification à apporter à cette "
-#~ "entrée."
-
-#~ msgid "Propose entry"
-#~ msgstr "Proposer une entrée"
-
-#~ msgid "Something missing? Propose a new entry."
-#~ msgstr "Il manque quelque chose? Proposez une nouvelle entrée."
-
-#~ msgid "Newsletter Subscription"
-#~ msgstr "Abonnement à la newsletter "
-
-#~ msgid "Update Newsletter Subscription"
-#~ msgstr "Mettre à jour l'abonnement à la lettre d'information"
-
-#~ msgid "Update your newsletter subscription categories:"
-#~ msgstr "Mettre à jour les catégories d'abonnement à la newsletter:"
-
-#~ msgid ""
-#~ "Select newsletter categories your are interested in. You will receive the "
-#~ "newsletter if it reports on at least one of the subscribed categories."
-#~ msgstr ""
-#~ "Sélectionnez les catégories de lettres d'information qui vous "
-#~ "intéressent. Vous recevrez la newsletter si elle traite d'au moins une "
-#~ "des catégories souscrites."
-
-#~ msgid ""
-#~ "Select categories the newsletter reports on. The users will receive the "
-#~ "newsletter only if it reports on at least one of the categories the user "
-#~ "subscribed to."
-#~ msgstr ""
-#~ "Sélectionnez les catégories sur lesquelles la lettre d'information porte. "
-#~ "Les utilisateurs ne recevront la lettre d'information que si elle "
-#~ "concerne au moins l'une des catégories auxquelles l'utilisateur s'est "
-#~ "abonné."
-
-#~ msgid ""
-#~ "Example for newsletter topics with subtopics in yaml format. Note: Deeper "
-#~ "structures are not supported.\n"
-#~ "```\n"
-#~ "Organisation:\n"
-#~ "  - Topic 1:\n"
-#~ "    - Subtopic 1.1\n"
-#~ "    - Subtopic 1.2\n"
-#~ "  - Topic 2\n"
-#~ "  - Topic 3:\n"
-#~ "    - Subtopic 3.1\n"
-#~ "```"
-#~ msgstr ""
-#~ "Exemple de sujets de newsletter avec des sous-sujets au format yaml. "
-#~ "Note : Les structures plus profondes ne sont pas prises en charge. \n"
-#~ "```\n"
-#~ "Organisation:\n"
-#~ "  - Thème 1:\n"
-#~ "  - Sous-thème 1.1\n"
-#~ "  - Sous-thème 1.2\n"
-#~ "  - Thème 2\n"
-#~ "  - Thème 3:\n"
-#~ "  - Sous-thème 3.1```"
-
-#~ msgid "Error: No custom texts found"
-#~ msgstr "Erreur: Aucun texte personnalisé n'a été trouvé"
-
-#, python-format
-#~ msgid "Error: No custom text found for '${key}'"
-#~ msgstr "Erreur : Aucun texte personnalisé n'a été trouvé pour '${key}'"
-
-#~ msgid "Subscribe to Selection as RSS"
-#~ msgstr "S'abonner aux hashtags"
-
-#~ msgid "Save"
-#~ msgstr "Sauver"
-
-#~ msgid "This event can't be edited."
-#~ msgstr "Cet événement ne peut pas être édité."
-
-#~ msgid "Imported events can not be edited."
-#~ msgstr "Les événements importés ne peuvent pas être édités."
-
-#~ msgid "Withdraw event"
-#~ msgstr "Retirer l'événement"
-
-#~ msgid "Do you really want to withdraw this event?"
-#~ msgstr "Voulez-vous retirer l'événement?"
-
-#~ msgid "You can re-publish an imported event later."
-#~ msgstr "Vous pouvez republier un événement importé plus tard."
-
-#~ msgid "Re-publish event"
-#~ msgstr "Republier l'événement"
-
-#~ msgid "Do you really want to delete this event?"
-#~ msgstr "Voulez-vous vraiment supprimer cet événement ?"
-
-#~ msgid "This cannot be undone."
-#~ msgstr "Cela ne peut être effectué."
-
-#~ msgid "Delete event"
-#~ msgstr "Supprimer l'événement"
-
-#~ msgid "This event can't be deleted."
-#~ msgstr "Cet événement ne peut être supprimé."
-
-#~ msgid "To remove this event, go to the ticket and reject it."
-#~ msgstr "Pour supprimer cet événement, allez sur le ticket et refusez-le."
-
-#~ msgid "Show news as tiles"
-#~ msgstr "Afficher les actualités sous forme de tuiles"
-
-#~ msgid ""
-#~ "If checked, news are displayed as tiles. Otherwise, news are listed in "
-#~ "full length."
-#~ msgstr ""
-#~ "Si cette case est activée, les nouvelles sont affichées sous forme de "
-#~ "tuiles. Dans le cas contraire, les nouvelles sont listés dans leur "
-#~ "intégralité."
-
-#~ msgid "Settings"
-#~ msgstr "Paramètres"
-
-#~ msgid "Forms"
-#~ msgstr "Formulaires"
-
-#~ msgid "This form can't be deleted."
-#~ msgstr "Ce formulaire ne peut être supprimé."
-
-#~ msgid ""
-#~ "There are submissions associated with the form. Those need to be removed "
-#~ "first."
-#~ msgstr ""
-#~ "Il existe des requêtes associées à ce formulaire. Il faut d'abord les "
-#~ "supprimer."
-
-#~ msgid "Do you really want to delete this form?"
-#~ msgstr "Voulez-vous vraiment supprimer ce formulaire ?"
-
-#~ msgid "Delete form"
-#~ msgstr "Supprimer le formulaire"
-
-#~ msgid "Registration Windows"
-#~ msgstr "Fenêtres d'inscription"
-
-#~ msgid "External form"
-#~ msgstr "Formulaire externe"
-
-#~ msgid "New external form"
-#~ msgstr "Nouveau formulaire externe"
-
-#~ msgid "Person"
-#~ msgstr "Personne"
-
-#~ msgid "Do you really want to delete this person?"
-#~ msgstr "Voulez-vous vraiment supprimer cette personne ?"
-
-#~ msgid "Delete person"
-#~ msgstr "Supprimer la personne"
-
-#~ msgid "Delete archived tickets"
-#~ msgstr "Supprimer les tickets archivés"
-
-#~ msgid "Do you really want to delete all archived tickets?"
-#~ msgstr "Voulez-vous vraiment supprimer tous les tickets archivés ?"
-
-#~ msgid "Accept ticket"
-#~ msgstr "Accepter le ticket"
-
-#~ msgid "This ticket can't be closed."
-#~ msgstr "Ce ticket ne peut pas être fermé."
-
-#~ msgid "This ticket requires a decision, but no decision has been made yet."
-#~ msgstr "Ce ticket nécessite une décision, mais aucune n'a encore été prise."
-
-#~ msgid "Assign ticket"
-#~ msgstr "Attribuer le ticket"
-
-#~ msgid "Close ticket"
-#~ msgstr "Fermer le ticket"
-
-#~ msgid "Reopen ticket"
-#~ msgstr "Ré-ouvrir le ticket"
-
-#~ msgid "Archive ticket"
-#~ msgstr "Archiver le ticket"
-
-#~ msgid "Recover from archive"
-#~ msgstr "Récupérer dans les archives"
-
-#~ msgid "Delete Ticket"
-#~ msgstr "Supprimer le ticket"
-
-#~ msgid "PDF"
-#~ msgstr "PDF"
-
-#~ msgid "Download files"
-#~ msgstr "Télécharger les fichiers"
-
-#~ msgid "New Message"
-#~ msgstr "Nouveau message"
-
-#~ msgid "Ticket Status"
-#~ msgstr "Statut du ticket"
-
-#~ msgid "Text modules"
-#~ msgstr "Modules de texte"
-
-#~ msgid "Text module"
-#~ msgstr "Module de texte"
-
-#~ msgid "Do you really want to delete this text module?"
-#~ msgstr "Voulez-vous vraiment supprimer ce module de texte ?"
-
-#~ msgid "Delete text module"
-#~ msgstr "Supprimer le module de texte"
-
-#~ msgid "Room"
-#~ msgstr "Espace"
-
-#~ msgid "Daypass"
-#~ msgstr "Carte journalière"
-
-#~ msgid "Resource Item"
-#~ msgstr "Article"
-
-#~ msgid "External resource link"
-#~ msgstr "Lien de ressource externe"
-
-#~ msgid "New external resource"
-#~ msgstr "Nouvelle ressource externe"
-
-#~ msgid "Export All"
-#~ msgstr "Exporter tout"
-
-#~ msgid "Notifications"
-#~ msgstr "Notifications"
-
-#~ msgid "E-Mail Recipient"
-#~ msgstr "Destinataire de l'e-mail"
-
-#~ msgid "Do you really want to delete this resource?"
-#~ msgstr "Voulez-vous vraiment supprimer cette ressource ?"
-
-#~ msgid "Delete resource"
-#~ msgstr "Supprimer la ressource"
-
-#~ msgid "This resource can't be deleted."
-#~ msgstr "Cette ressource ne peut être supprimée."
-
-#~ msgid "There are existing reservations associated with this resource"
-#~ msgstr "Des réservations existantes sont associées à cette ressource"
-
-#~ msgid "Clean up"
-#~ msgstr "Nettoyer"
-
-#~ msgid "Rules"
-#~ msgstr "Règles"
-
-#~ msgid "Rule"
-#~ msgstr "Règle"
-
-#~ msgid "Edit allocation"
-#~ msgstr "Modifier l'allocation"
-
-#~ msgid "Do you really want to delete this allocation?"
-#~ msgstr "Voulez-vous vraiment supprimer cette allocation ?"
-
-#~ msgid "Delete allocation"
-#~ msgstr "Supprimer l'allocation"
-
-#, python-format
-#~ msgid "Every ${days} until ${end}"
-#~ msgstr "Tous les ${days} jusqu'à ${end}"
-
-#~ msgid "New"
-#~ msgstr "Nouveau"
-
-#~ msgid "Subscribers"
-#~ msgstr "Abonnés"
-
-#~ msgid "Test"
-#~ msgstr "Test"
-
-#~ msgid "Delete newsletter"
-#~ msgstr "Supprimer la newsletter"
-
-#~ msgid "Photo Albums"
-#~ msgstr "Albums photo"
-
-#~ msgid "Manage images"
-#~ msgstr "Gérer les images"
-
-#~ msgid "Photo Album"
-#~ msgstr "Album photo"
-
-#~ msgid "Choose images"
-#~ msgstr "Choisir des images"
-
-#~ msgid "Delete photo album"
-#~ msgstr "Supprimer l'album photo"
-
-#~ msgid "Usermanagement"
-#~ msgstr "Gestion de l'utilisateur"
-
-#~ msgid "Create Signup Link"
-#~ msgstr "Créez un lien d'inscription"
-
-#~ msgid "User"
-#~ msgstr "Utilisateur"
-
-#~ msgid "User groups"
-#~ msgstr "Groupes d'utilisateurs"
-
-#~ msgid "Do you really want to delete this user group?"
-#~ msgstr "Voulez-vous vraiment supprimer ce groupe d'utilisateurs ?"
-
-#~ msgid "Delete user group"
-#~ msgstr "Supprimer le groupe d'utilisateurs"
-
-#~ msgid "Payment Providers"
-#~ msgstr "Opérateurs de paiement"
-
-#~ msgid "Payments"
-#~ msgstr "Paiements"
-
-#~ msgid "Synchronise"
-#~ msgstr "Synchroniser"
-
-#~ msgid "Upcoming"
-#~ msgstr "A l'anvenir"
-
-#~ msgid "Past"
-#~ msgstr "Passé"
-
-#~ msgid "Choose filter"
-#~ msgstr "Sélectionner un filtre"
-
-#~ msgid "Delete entry"
-#~ msgstr "Supprimer l'entrée"
-
-#~ msgid "Dashboard"
-#~ msgstr "Dashboard"
-
-#~ msgid "Do you really want to delete this external link?"
-#~ msgstr "Voulez-vous vraiment supprimer ce lien externe?"
-
-#~ msgid "Delete external link"
-#~ msgstr "Supprimer lien externe"
-
-#~ msgid "Chat with"
-#~ msgstr "Chat avec"
-
-#~ msgid "Please add a day and times to each opening hour entry."
-#~ msgstr "Veuillez ajouter un jour et des heures à chaque heure d'ouverture."
-
-#~ msgid "The chat is currently in a test-phase. Activate at your own risk."
-#~ msgstr ""
-#~ "Le chat est actuellement en phase de test. Activer à vos risques et périls"
-
-#~ msgid "Chat title"
-#~ msgstr "Title du Chat"
-
-#~ msgid "Chat background color"
-#~ msgstr "Couleur de fond de Chat"
-
-#~ msgid "Customer-ID"
-#~ msgstr "Identifiant du client"
-
-#~ msgid "Admin"
-#~ msgstr "Admin"
-
-#~ msgid "Disable the chat"
-#~ msgstr "Désactiver le Chat"
-
-#~ msgid "Supported Chat Integrations"
-#~ msgstr "Integrations de Chat supportées"
-
-#~ msgid "Straight to ..."
-#~ msgstr "Directement à ..."
-
-#~ msgid "Perform Search"
-#~ msgstr "Rechercher"
