--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-06-26 15:55+0200\n"
+"POT-Creation-Date: 2025-07-01 09:10+0200\n"
 "PO-Revision-Date: 2022-03-15 10:50+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: French\n"
@@ -188,6 +188,9 @@ msgstr "Utilisateurs"
 
 msgid "User groups"
 msgstr "Groupes d'utilisateurs"
+
+msgid "RIS Settings"
+msgstr "Paramètres RIS"
 
 msgid "Link Check"
 msgstr "Vérification du lien"
@@ -390,6 +393,15 @@ msgstr "Limit des reservations"
 
 msgid "Start time before end time"
 msgstr "Heure de début avant l'heure de fin"
+
+msgid "Name"
+msgstr "Nom"
+
+msgid "Type"
+msgstr "Type"
+
+msgid "Description"
+msgstr "Description"
 
 msgid "Lead"
 msgstr "Accroche"
@@ -597,9 +609,6 @@ msgstr "Les dates de publication sont requises"
 msgid "Information to be provided in addition to the E-mail"
 msgstr "Informations complémentaires du demandeur requises à l'e-mail"
 
-msgid "Name"
-msgstr "Nom"
-
 msgid "Phone"
 msgstr "Téléphone"
 
@@ -801,9 +810,6 @@ msgstr "Di"
 
 msgid "Concerto in the castle garden"
 msgstr "Concerto dans le jardin du château"
-
-msgid "Description"
-msgstr "Description"
 
 msgid "Enjoy a concerto in the castle garden."
 msgstr "Profitez d'un concerto dans le jardin du château."
@@ -1145,6 +1151,9 @@ msgstr "Par légende"
 msgid "By last change"
 msgstr "Par date de dernière modification"
 
+msgid "Portrait"
+msgstr "Portrait"
+
 msgid "Used in the overview and the e-mail subject"
 msgstr "Utilisé dans l'aperçu et le sujet de l'e-mail"
 
@@ -1273,17 +1282,113 @@ msgstr "- Page de base-"
 msgid "Invalid destination selected"
 msgstr "Destination non valide sélectionnée"
 
-msgid "Salutation"
-msgstr "Civilité"
+msgid "Personnel number"
+msgstr "Numéro de personnel"
 
-msgid "Academic Title"
-msgstr "Diplôme"
+msgid "Basic properties"
+msgstr "Propriétés fondamentales"
+
+msgid "Contract number"
+msgstr "Numéro de contrat"
+
+msgid "Gender"
+msgstr "Sexe"
 
 msgid "First name"
 msgstr "Prénom"
 
 msgid "Last name"
 msgstr "Nom de famille"
+
+msgid "Picture"
+msgstr "Photo"
+
+msgid "Private address"
+msgstr "Adresse privée"
+
+msgid "Addition"
+msgstr "Supplément"
+
+msgid "Zip code"
+msgstr "Code postal"
+
+msgid "City"
+msgstr "Ville"
+
+msgid "Date of birth"
+msgstr "Date de naissance"
+
+msgid "Additional information"
+msgstr "Informations complémentaires"
+
+msgid "Date of death"
+msgstr "Date de décès"
+
+msgid "Place of origin"
+msgstr "Lieu d'origine"
+
+msgid "Occupation"
+msgstr "Profession"
+
+msgid "Academic title"
+msgstr "Titre académique"
+
+msgid "Salutation"
+msgstr "Civilité"
+
+msgid "Private phone number"
+msgstr "Numéro de téléphone privé"
+
+msgid "Mobile phone number"
+msgstr "Numéro de téléphone mobile"
+
+msgid "Business phone number"
+msgstr "Numéro de téléphone professionnel"
+
+msgid "Primary email address"
+msgstr "Adresse e-mail principale"
+
+msgid "Secondary email address"
+msgstr "Adresse e-mail secondaire"
+
+msgid "Website"
+msgstr "Site Web"
+
+msgid "Remarks"
+msgstr "Remarques"
+
+msgid "Shipping method"
+msgstr "Mode d'expédition"
+
+msgid "Shipping address"
+msgstr "Adresse de livraison"
+
+msgid "Salutation used in the address"
+msgstr "Civilité utilisée dans l'adresse"
+
+msgid "Salutation used for letters"
+msgstr "Civilité utilisée dans l'adresse"
+
+msgid "How bills should be delivered"
+msgstr "Comment les factures doivent être livrées"
+
+msgid "Parliamentarian"
+msgstr "Parlementaire"
+
+msgid "Role"
+msgstr "Rôle"
+
+msgid "Party role"
+msgstr "Rôle dans le parti"
+
+msgid "Parliamentary group"
+msgstr "Groupe Parlementaire"
+
+msgid "Parliamentary group role"
+msgstr "Rôle dans le groupe parlementaire"
+
+msgid "Academic Title"
+msgstr "Diplôme"
 
 msgid "Function"
 msgstr "Fonction"
@@ -1309,9 +1414,6 @@ msgstr "Parti politique"
 msgid "Parliamentary Group"
 msgstr "Groupe parlementaire"
 
-msgid "Website"
-msgstr "Site Web"
-
 msgid "Website 2"
 msgstr "Site Web 2"
 
@@ -1326,9 +1428,6 @@ msgstr "Adresse postale"
 
 msgid "Postal Code and City"
 msgstr "Code postal et ville"
-
-msgid "Picture"
-msgstr "Photo"
 
 msgid "URL pointing to the picture"
 msgstr "URL pointant vers la photo"
@@ -2540,9 +2639,6 @@ msgstr "Actif"
 msgid "Inactive"
 msgstr "Inactif"
 
-msgid "Role"
-msgstr "Rôle"
-
 msgid "Yubikey"
 msgstr "Yubikey"
 
@@ -2589,6 +2685,16 @@ msgstr ""
 msgid "Shared e-mail address for ticket submission notifications"
 msgstr ""
 "Adresse électronique partagée pour les notifications de soumission de ticket"
+
+msgid ""
+"When specified, notifications for new tickets will be sent to this e-mail "
+"address, instead of to individual members. Requires that immediate e-mail "
+"notifications are turned on for at least one kind of ticket."
+msgstr ""
+"Lorsque cette option est spécifiée, les notifications pour les nouveaux "
+"tickets seront envoyées à cette adresse e-mail, plutôt qu'aux membres "
+"individuels. Nécessite que les notifications immédiates par e-mail soient "
+"activées pour au moins un type de ticket."
 
 msgid "Send a periodic status e-mail."
 msgstr "Envoyer un e-mail d'état périodique."
