--- a/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2025-07-01 09:08+0200\n"
+"POT-Creation-Date: 2025-07-03 09:15+0200\n"
 "PO-Revision-Date: 2021-03-03 16:24+0100\n"
 "Last-Translator: Lukas Burkhard <lukas.burkhard@seantis.ch>\n"
 "Language-Team: German\n"
@@ -698,6 +698,9 @@ msgstr "Datenschutz"
 msgid "Login"
 msgstr "Anmelden"
 
+msgid "Citizen Login"
+msgstr "Kunden-Login"
+
 msgid "About"
 msgstr "Impressum"
 
@@ -1226,6 +1229,19 @@ msgstr "Nachfolgend sehen Sie Ihre Chat-Konversation:"
 
 msgid "Have a great day!"
 msgstr "Wir wünschen Ihnen einen schönen Tag!"
+
+msgid "Your e-mail address was just used to send a login link to ${homepage}."
+msgstr ""
+"Ihre E-Mail Adresse wurde soeben zum Senden eines Anmeldelinks auf "
+"${homepage} verwendet."
+
+msgid "Use the token below or click on the link to complete your login."
+msgstr ""
+"Verwenden Sie den untenstehenden Login-Code oder klicken Sie auf den Link, "
+"um Ihre Anmeldung abzuschliessen."
+
+msgid "Complete Login"
+msgstr "Anmeldung abschliessen"
 
 msgid "Hello"
 msgstr "Grüezi"
@@ -1951,14 +1967,14 @@ msgstr "Elektronische Visitenkarte (vCard)"
 msgid "Number"
 msgstr "Nummer"
 
-msgid "Type"
-msgstr "Typ"
+msgid "Business Type"
+msgstr "Geschäftsart"
 
 msgid "Status"
 msgstr "Status"
 
 msgid "Participants"
-msgstr "Teilnehmer"
+msgstr "Verfasser/Beteiligte"
 
 msgid "Parliamentary Group"
 msgstr "Fraktion"
@@ -2561,68 +2577,8 @@ msgstr "Ratsinformationssystem"
 msgid "Ratsinformationssystem (RIS)"
 msgstr "Ratsinformationssystem (RIS)"
 
-msgid "Participants"
-msgstr "Verfasser/Beteiligte"
-
 msgid "New Note"
 msgstr "Neue Notiz"
-
-msgid "Inquiry"
-msgstr "Anfrage"
-
-msgid "Proposal"
-msgstr "Antrag"
-
-msgid "Mandate"
-msgstr "Auftrag"
-
-msgid "Report"
-msgstr "Bericht"
-
-msgid "Report and Proposal"
-msgstr "Bericht und Antrag"
-
-msgid "Decision"
-msgstr "Beschluss"
-
-msgid "Message"
-msgstr "Botschaft"
-
-msgid "Urgent Interpellation"
-msgstr "Dringliche Interpellation"
-
-msgid "Invitation"
-msgstr "Einladung"
-
-msgid "Interpellation"
-msgstr "Interpellation"
-
-msgid "Commission Report"
-msgstr "Kommissionsbericht"
-
-msgid "Communication"
-msgstr "Mitteilung"
-
-msgid "Motion"
-msgstr "Motion"
-
-msgid "Postulate"
-msgstr "Postulat"
-
-msgid "Resolution"
-msgstr "Resolution"
-
-msgid "Regulation"
-msgstr "Verordnung"
-
-msgid "Miscellaneous"
-msgstr "Verschiedenes"
-
-msgid "Elections"
-msgstr "Wahlen"
-
-msgid "Business Type"
-msgstr "Geschäftsart"
 
 #~ msgid "Parliamentarian is not in this commission."
 #~ msgstr "Parlamentarier:in ist nicht in dieser Kommission."
@@ -2710,16 +2666,6 @@ msgstr "Geschäftsart"
 
 #~ msgid "City"
 #~ msgstr "Ort"
-
-msgid "Political Business"
-msgstr "Politisches Geschäft"
-
-msgid "Political Businesses"
-msgstr "Politische Geschäfte"
-
-msgid "No political businesses defined yet."
-msgstr "Es wurden noch keine politischen Geschäfte erfasst."
-
 
 #~ msgid "Sign up"
 #~ msgstr "Anmelden"
